# gistdb

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  coverage.yml  docker.yml  lint.yml
benchmarks/: engines.py  generate_load.py  make_charts.py  report.md  run_benchmarks.py
docs/decisions/: 0001-column-storage-and-row-group-footer.md  0002-scoped-temp-file-test-helper.md  0003-file-header-and-page-allocator-persistence.md  0004-disk-manager.md  0005-table-object.md  0006-schema-section-and-shared-byte-io.md  0007-catalog.md  0008-data-chunk-and-operator-interface.md  0009-bound-expression-types.md  0010-expression-evaluator.md  0011-filter-operator.md  0012-aggregate-accumulators.md  0013-hash-join-operator.md  README.md
include/gistdb/: constants.hpp  types.hpp
include/gistdb/binder/: ast.hpp  binder.hpp  logical_plan.hpp  parser.hpp  resolution.hpp  type_coercion.hpp
include/gistdb/catalog/: catalog.hpp  column_def.hpp  schema_section.hpp  table_object.hpp
include/gistdb/cli/: driver.hpp  output_formatter.hpp
include/gistdb/execution/: aggregate_accumulator.hpp  aggregation_operator.hpp  bound_expression.hpp  data_chunk.hpp  expression_evaluator.hpp  filter_operator.hpp  hash_join_operator.hpp  insert_executor.hpp  operator.hpp  projection_operator.hpp  seq_scan_operator.hpp
include/gistdb/optimizer/: column_pruning.hpp  optimizer.hpp  predicate_pushdown.hpp  predicate_utils.hpp
include/gistdb/serialization/: byte_io.hpp
include/gistdb/storage/: buffer_pool_manager.hpp  column_footer_entry.hpp  disk_manager.hpp  file_header.hpp  fixed_width_column.hpp  footer.hpp  page_range.hpp  replacer.hpp  row_group_footer_entry.hpp  validity_bitmap.hpp  varchar_column.hpp  zone_map.hpp
src/: main.cpp
src/binder/: ast.cpp  binder.cpp  logical_plan.cpp  parser.cpp  resolution.cpp  type_coercion.cpp
src/catalog/: catalog.cpp  schema_section.cpp  table_object.cpp
src/cli/: driver.cpp  output_formatter.cpp
src/execution/: aggregate_accumulator.cpp  aggregation_operator.cpp  bound_expression.cpp  data_chunk.cpp  expression_evaluator.cpp  filter_operator.cpp  hash_join_operator.cpp  insert_executor.cpp  projection_operator.cpp  seq_scan_operator.cpp
src/optimizer/: column_pruning.cpp  optimizer.cpp  predicate_pushdown.cpp  predicate_utils.cpp
src/serialization/: byte_io.cpp
src/storage/: buffer_pool_manager.cpp  column_footer_entry.cpp  disk_manager.cpp  file_header.cpp  fixed_width_column.cpp  footer.cpp  replacer.cpp  row_group_footer_entry.cpp  validity_bitmap.cpp  varchar_column.cpp  zone_map.cpp
tests/: CMakeLists.txt  constants_test.cpp  types_test.cpp
tests/binder/: ast_test.cpp  binder_test.cpp  logical_plan_test.cpp  parser_test.cpp  resolution_test.cpp  type_coercion_test.cpp
tests/catalog/: catalog_test.cpp  schema_section_test.cpp  table_object_test.cpp
tests/cli/: driver_test.cpp  output_formatter_test.cpp
tests/cli/.cph/: .driver_test.cpp_f1597caa4b2b49413f02dba13371fc37.prob
tests/execution/: aggregate_accumulator_test.cpp  aggregation_operator_test.cpp  bound_expression_test.cpp  data_chunk_test.cpp  expression_evaluator_test.cpp  filter_operator_test.cpp  hash_join_operator_test.cpp  insert_executor_test.cpp  projection_operator_test.cpp  seq_scan_operator_test.cpp
tests/optimizer/: column_pruning_test.cpp  optimizer_test.cpp  predicate_pushdown_test.cpp  predicate_utils_test.cpp
tests/serialization/: byte_io_test.cpp
tests/storage/: buffer_pool_manager_test.cpp  column_footer_entry_test.cpp  disk_manager_test.cpp  file_header_test.cpp  fixed_width_column_test.cpp  footer_test.cpp  replacer_test.cpp  row_group_footer_entry_test.cpp  validity_bitmap_test.cpp  varchar_column_test.cpp  zone_map_test.cpp
tests/test_utils/: mock_operator.hpp  scoped_temp_file.hpp
