find_package(GTest REQUIRED)
include(GoogleTest)

# Usage: add_gistdb_test(test_name source1.cpp [source2.cpp ...])
function(add_gistdb_test test_name)
  add_executable(${test_name} ${ARGN})
  target_link_libraries(${test_name} PRIVATE gistdb_core GTest::gtest GTest::gtest_main)
  gtest_discover_tests(${test_name})
endfunction()

add_gistdb_test(constants_test constants_test.cpp)
add_gistdb_test(types_test types_test.cpp)
add_gistdb_test(validity_bitmap_test storage/validity_bitmap_test.cpp)
add_gistdb_test(fixed_width_column_test storage/fixed_width_column_test.cpp)
add_gistdb_test(varchar_column_test storage/varchar_column_test.cpp)
