include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG v1.17.0
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

include(GoogleTest)

# Usage: add_gistdb_test(test_name source1.cpp [source2.cpp ...])
function(add_gistdb_test test_name)
  add_executable(${test_name} ${ARGN})
  target_link_libraries(${test_name} PRIVATE gistdb_core GTest::gtest GTest::gtest_main)
  gtest_discover_tests(${test_name})
endfunction()

add_gistdb_test(constants_test constants_test.cpp)
add_gistdb_test(types_test types_test.cpp)
add_gistdb_test(validity_bitmap_test storage/validity_bitmap_test.cpp)
add_gistdb_test(fixed_width_column_test storage/fixed_width_column_test.cpp)
add_gistdb_test(varchar_column_test storage/varchar_column_test.cpp)
add_gistdb_test(zone_map_test storage/zone_map_test.cpp)
add_gistdb_test(column_footer_entry_test storage/column_footer_entry_test.cpp)
add_gistdb_test(row_group_footer_entry_test storage/row_group_footer_entry_test.cpp)
add_gistdb_test(footer_test storage/footer_test.cpp)
add_gistdb_test(file_header_test storage/file_header_test.cpp)
add_gistdb_test(disk_manager_test storage/disk_manager_test.cpp)
add_gistdb_test(table_object_test catalog/table_object_test.cpp)
add_gistdb_test(byte_io_test serialization/byte_io_test.cpp)
add_gistdb_test(schema_section_test catalog/schema_section_test.cpp)
add_gistdb_test(catalog_test catalog/catalog_test.cpp)
add_gistdb_test(data_chunk_test execution/data_chunk_test.cpp)
add_gistdb_test(bound_expression_test execution/bound_expression_test.cpp)
add_gistdb_test(expression_evaluator_test execution/expression_evaluator_test.cpp)
add_gistdb_test(filter_operator_test execution/filter_operator_test.cpp)
add_gistdb_test(aggregate_accumulator_test execution/aggregate_accumulator_test.cpp)
add_gistdb_test(hash_join_operator_test execution/hash_join_operator_test.cpp) 
add_gistdb_test(ast_test binder/ast_test.cpp)
add_gistdb_test(parser_test binder/parser_test.cpp)
add_gistdb_test(type_coercion_test binder/type_coercion_test.cpp)
add_gistdb_test(logical_plan_test binder/logical_plan_test.cpp)
add_gistdb_test(resolution_test binder/resolution_test.cpp)
add_gistdb_test(binder_test binder/binder_test.cpp)
